添加門市資訊和樣式

--- a/style.css
+++ b/style.css
@@ -107,3 +107,31 @@ nav {
     background: #226641;
     color: #fff;
 }
+
+/* 門市資訊 */
+#info {
+    display: grid;
+    /* repeat(數量，寬度) */
+    /* fr 格子 */
+    /* 格子 / 數量 */
+    /* 1fr / 3 */
+    grid-template-columns: repeat(3,1fr);
+    /* 使用 repeat 可以用 間隙 (圖片之間產生間隙) */
+    grid-gap: 20px;
+    width: 1080px;
+    margin: 20px auto 0;
+}
+
+#info .pic img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+#info .text h1{
+    padding: 30px 0;
+}
+
+#info .text p{
+    padding: 20px 0;
+}
